fix(body-overflow):fix body overflow issue (#2328)

--- a/runtime/src/assets/stylesheets/shared/_layout.less
+++ b/runtime/src/assets/stylesheets/shared/_layout.less
@@ -7,9 +7,7 @@
 body {
   font-family: Open Sans;
   font-size: 14px;
-  overflow: hidden;
 }
-
 @media (max-width: @grid-float-breakpoint) {
   .mobdn { display: none; }
 }
