--- a/src/assets/stylesheets/shared/_layout.less
+++ b/src/assets/stylesheets/shared/_layout.less
@@ -57,9 +57,7 @@
 body {
   font-family: Open Sans;
   font-size: 14px;
-  overflow: hidden;
 }
-
 @media (max-width: @grid-float-breakpoint) {
   .mobdn { display: none; }
 }
